force-app/main/default/objects/Contact/fields/Receive_Birthday__c.field-meta.xml
<CustomField>
    <fullName>Receive_Birthday__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Receive Birthday</label>
    <type>Checkbox</type>
</CustomField>