force-app/main/default/objects/Contact/fields/Reset_Birthday__c.field-meta.xml
<CustomField>
    <fullName>Reset_Birthday__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Reset Birthday</label>
    <type>Checkbox</type>
</CustomField>