force-app/main/default/objects/Contact/recordTypes/Supply_Contact.recordType-meta.xml
<RecordType>
    <fullName>Supply_Contact</fullName>
    <active>true</active>
    <label>Supply Contact</label>
</RecordType>