force-app/main/default/objects/Contact/validationRules/Check_Mobile_Phone_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Mobile_Phone_Format</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(MobilePhone, &quot;\\D*?(\\d\\D*?){10}&quot;))</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Mobile phone number should be in this format: (000) 000-0000</errorMessage>
</ValidationRule>