force-app/main/default/objects/Contact/validationRules/Check_phone_number_format.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_phone_number_format</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(OtherPhone, &quot;\\D*?(\\d\\D*?){10}&quot;))</errorConditionFormula>
    <errorDisplayField>OtherPhone</errorDisplayField>
    <errorMessage>Phone numbers should be in this format: (000) 000-0000</errorMessage>
</ValidationRule>