force-app/main/default/objects/Contact/listViews/Customer.listView-meta.xml
<ListView>
    <fullName>Customer</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Customer_Contact</value>
    </filters>
    <label>Customer</label>
    <sharedTo>
        <group>List_Views</group>
    </sharedTo>
</ListView>