force-app/main/default/objects/Contact/listViews/Supplier.listView-meta.xml
<ListView>
    <fullName>Supplier</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Supply_Contact</value>
    </filters>
    <label>Supplier</label>
    <sharedTo>
        <group>List_Views</group>
    </sharedTo>
</ListView>